test/compile-fail/resolution/use/pub-self-mod/expected.txt
error: could not parse ./test/compile-fail/resolution/use/pub-self-mod/top.rhdl: unexpected token
  ┌─ ./test/compile-fail/resolution/use/pub-self-mod/top.rhdl:3:13
  │
3 │         pub(self) struct c {}
  │             ^^^^ expected any of ["TokIn"]

